<resources>
    <string name="app_name">Fooooood</string>
    <string name="title">Fooooood</string>
    <string name="nearRestaurant">附近熱門選項</string>
    <string name="Hot">附近熱門選項</string>
    <string name="all">全部選項</string>
    <string name="open">營業中</string>
    <string name="close">休息中 </string>
    <string name="store_name">Pizzzzzza</string>
    <string name="accept">接單</string>
    <string name="decline">拒單</string>
    <string name="first_fragment_label">first_fragment_label</string>
    <string name="second_fragment_label">second_fragment_label</string>
    <string name="hello_first_fragment">hello_first_fragment</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="register">註冊</string>
    <string name="customer">消費者</string>
    <string name="store">店家</string>
    <string name="delivery">外送員</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>